force-app/main/default/objects/RW_Sub_Offer__c/RW_Sub_Offer__c.object-meta.xml
<CustomObject>
    <label>Sub Offer</label>
    <nameField>
        <label>Sub Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>