force-app/main/default/objects/RW_Sub_Offer__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Sub Offers</relationshipLabel>
    <relationshipName>Sub_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>