force-app/main/default/objects/RW_Sub_Offer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Sub Offers</relationshipLabel>
    <relationshipName>Sub_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>