force-app/main/default/objects/RW_Sub_Offer__c/fields/RW_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Status__c</fullName>
    <formula>IF(RW_End_Date__c &lt; TODAY() ,&apos;Expired&apos;,&apos;Active&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>