force-app/main/default/objects/RW_Sub_Offer__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Sub Offers</relationshipLabel>
    <relationshipName>Sub_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>