force-app/main/default/objects/RW_Sub_Offer__c/validationRules/Blank_Offer_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Offer_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(RW_Offer_Type__c))</errorConditionFormula>
    <errorMessage>Please select a offer Type</errorMessage>
</ValidationRule>