force-app/main/default/objects/RW_Sub_Offer__c/validationRules/Blank_Start_Date_Or_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Start_Date_Or_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(RW_Start_Date__c)  ||   ISBLANK(RW_End_Date__c)</errorConditionFormula>
    <errorMessage>Start Date and End Date Cannot be blank</errorMessage>
</ValidationRule>