force-app/main/default/objects/RW_Sub_Offer__c/validationRules/Blank_Sub_Offer_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Sub_Offer_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Please enter a Sub Offer Name</errorMessage>
</ValidationRule>