force-app/main/default/objects/RW_Sub_Offer__c/validationRules/Blank_Tower.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Tower</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Tower__c )</errorConditionFormula>
    <errorMessage>Please select the Tower for the offer</errorMessage>
</ValidationRule>