force-app/main/default/objects/RW_Sub_Offer__c/validationRules/End_Date_before_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_before_Today</fullName>
    <active>true</active>
    <errorConditionFormula>RW_End_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorMessage>End Date cannot be less than today</errorMessage>
</ValidationRule>