force-app/main/default/objects/RW_Sub_Offer__c/validationRules/End_Date_less_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_less_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(RW_End_Date__c  &lt;  RW_Start_Date__c )</errorConditionFormula>
    <errorMessage>End date cannot be before Start date</errorMessage>
</ValidationRule>